--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h3>
       2.<ins>KGF Part 2</ins>-130 million box collection & &#8377;1250 crore 😊
     </h3>
-    <img src="/DAY02/kgf 2 poster.jpg" height="400" width="350" alt="" />
+    <img src="https://in.pinterest.com/pin/583990276723566129/" height="400" width="350" alt="" />
     <video
       src="/DAY02/KGF Trilor.mp4 "
       controls
@@ -138,4 +138,5 @@
     </p>
   </body>
 </html>
+
 
