--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h3>
       2.<ins>KGF Part 2</ins>-130 million box collection & &#8377;1250 crore 😊
     </h3>
-    <img src="https://in.pinterest.com/pin/583990276723566129/" height="400" width="350" alt="" />
+    <img src="https://m.media-amazon.com/images/M/MV5BZmQzZjVkZTUtYjI4ZC00ZDJmLWI0ZDUtZTFmMGM1Mzc5ZjIyXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" height="400" width="350" alt="" />
     <video
       src="/DAY02/KGF Trilor.mp4 "
       controls
@@ -138,5 +138,6 @@
     </p>
   </body>
 </html>
+
 
 
