--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </h3>
 
     <img
-      src="/DAY02/Allu Arjun’s Pushpa 2_ The Rule is one of the most….jpeg"
+      src="https://in.pinterest.com/pin/12947917674605811/"
       height="400"
       width="350"
       alt=""
@@ -138,6 +138,7 @@
     </p>
   </body>
 </html>
+
 
 
 
