--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </h3>
 
     <img
-      src="https://in.pinterest.com/pin/12947917674605811/"
+      src="https://i.pinimg.com/1200x/e1/94/b3/e194b3af8eaf37384a8eb3f29e6cfd02.jpg"
       height="400"
       width="350"
       alt=""
@@ -138,6 +138,7 @@
     </p>
   </body>
 </html>
+
 
 
 
