--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <h3>
       <ins>Dhurandhar</ins>-140 million box collection & &#8377;1100crore😊
     </h3>
-    <img src="/DAY02/Dhurandar poster.png" height="400" width="350" alt="" />
+    <img src="https://i.pinimg.com/736x/c8/02/31/c8023110ddf2199111fb964631da02da.jpg" height="400" width="350" alt="" />
     <video
       src="/DAY02/Dhurandhar_First_Look_Ranveer_Singh_Aditya_Dhar_In_Cinemas_5th_December_2025_720p.mp4"
       height="400"
@@ -138,6 +138,7 @@
     </p>
   </body>
 </html>
+
 
 
 
