--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <h3>
       <ins>Tere ishq Mein</ins>-119 million box collection & &#8377;160crore😊
     </h3>
-    <img src="https://in.pinterest.com/pin/586523551516920866/" height="400" width="350" alt="" />
+    <img src="https://i.pinimg.com/736x/22/78/cf/2278cfc04354f368e8830d55439a7078.jpg" height="400" width="350" alt="" />
     <video
       src="/DAY02/TERE_ISHK_MEIN_TEASER_Hindi_Dhanush_Kriti_Sanon_A._R._Rahman_Aanand_L_Rai_Bhushan_Kumar_1080p.mp4"
       height="400"
@@ -138,6 +138,7 @@
     </p>
   </body>
 </html>
+
 
 
 
