--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <h1>MY MULTILEDIA BLOG Sponsered by Tap Academy &#8482;</h1>
     <h2>My favourite songs of all time</h2>
     <h3>Song 1 🕺</h3>
-    <audio src="/DAY02/Ae Dil Hai Mushkil-(Mr-Jat.in).mp3" controls></audio>
+    <audio src="./Ae Dil Hai Mushkil-(Mr-Jat.in).mp3" controls></audio>
     <h3>Song 2 🕺</h3>
     <audio
       controls
-      src="/DAY02/AllDjsMashup.Com_-_Alan_Walker_Mashup_by_Naresh_Parmar_AllDjsMashup.Com_(mp3.pm).mp3"
+      src="./AllDjsMashup.Com_-_Alan_Walker_Mashup_by_Naresh_Parmar_AllDjsMashup.Com_(mp3.pm).mp3"
       controls
     ></audio>
     <br />
 
     <audio
-      src="/DAY02/AllDjsMashup.Com_-_Airplanes_x_What_s_My_Name_-_Nat_Amanda_TikTok_AllDjsMashup.Com_(mp3.pm).mp3"
+      src="./AllDjsMashup.Com_-_Airplanes_x_What_s_My_Name_-_Nat_Amanda_TikTok_AllDjsMashup.Com_(mp3.pm).mp3"
       controls
     ></audio>
     <br />
-    <audio src="/DAY02/Meri Maa (Yaariyan)-(Mr-Jat.in).mp3" controls></audio>
+    <audio src="./Meri Maa (Yaariyan)-(Mr-Jat.in).mp3" controls></audio>
     <h2>Top 5 most watched Indian film <del>trailors</del> on You Tube</h2>
     <h3>
       1.<ins>Salar part 1 ceasefire</ins>-113.2 million & Box Office
@@ -138,6 +138,7 @@
     </p>
   </body>
 </html>
+
 
 
 
